Fix logo overflow on small mobile screens

--- a/resources/assets/sass/_header.scss
+++ b/resources/assets/sass/_header.scss
@@ -159,6 +159,10 @@
     .logo {
         order: 2;
         text-align: center;
+
+        img {
+            max-width: 100%;
+        }
     }
 
     .links {
